--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -7,16 +7,20 @@
 </head>
 <body>
 <div id="div1" align=center>
-	<canvas id="BBcanvas" width="490px" height="400px">
+	<canvas id="BBcanvas" width="700px" height="500px">
 	</canvas>
 	<script src="brickbreaker.js"></script>
-	<input type="radio" name="complexity" value="2"><label for="2">&nbsp;Kid</label></input> &nbsp;&nbsp;
-	<input type="radio" name="complexity" value="3"><label for="3">&nbsp;Easy</label></input> &nbsp;&nbsp;
-	<input type="radio" name="complexity" value="4"><label for="4">&nbsp;Medium</label></input> &nbsp;&nbsp;
-	<input type="radio" name="complexity" value="5"><label for="5">&nbsp;Hard</label></input> &nbsp;&nbsp;
-	<input type="radio" name="complexity" value="6"><label for="6">&nbsp;Pro</label></input>
 	<br/>
-	<button id="start">Start</button> <button id="pause" style="display: none;">Pause</button>
+	<div>
+	<input type="radio" name="complexity" value="2" class="complexity"><label for="2">Kid</label></input> &nbsp;&nbsp;
+	<input type="radio" name="complexity" value="3" class="complexity"><label for="3">Easy</label></input> &nbsp;&nbsp;
+	<input type="radio" name="complexity" value="4" class="complexity"><label for="4">Medium</label></input> &nbsp;&nbsp;
+	<input type="radio" name="complexity" value="5" class="complexity"><label for="5">Hard</label></input> &nbsp;&nbsp;
+	<input type="radio" name="complexity" value="6" class="complexity"><label for="6">Pro</label></input>
+	<div>
+	<br/>
+	<br/>
+	<button id="start">Start</button> &nbsp;&nbsp;&nbsp;&nbsp; <button id="pause" style="display: none;">Pause</button>
 	<!--
 	<embed src="beep1.wav" autostart="false" width="0" height="0" id="beep1" enablejavascript="true">
 	-->
