--- a/test.html
+++ b/test.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test</title>
+	<title>Garden</title>
+	<link rel="stylesheet" href="test.css">
 </head>
 <body>
-<div id="div1" align=center>
-	<script src="test.js"></script>
+
+<div class="garden">
+  <div class="ball"></div>
 </div>
+
+<pre class="output"></pre>
+
+<script src="test.js"></script>
+
 </body>
 </html>
+
