--- a/test.html
+++ b/test.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Garden</title>
+	<title>Test</title>
 	<link rel="stylesheet" href="test.css">
 </head>
 <body>
 
-<div class="garden">
-  <div class="ball"></div>
-</div>
-
-<pre class="output"></pre>
+<b>e.alpha :</b> <span id='alpha'></span><br/>
+<b>e.beta :</b> <span id='beta'></span><br/>
+<b>e.gamma :</b> <span id='gamma'></span><br/>
 
 <script src="test.js"></script>
 
