--- a/bbIndex.html
+++ b/bbIndex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Om's Brick Breaker</title>
+	<title>Brick Breaker</title>
 	<link rel="stylesheet" href="bbStyles.css">
 </head>
 <body>
@@ -31,5 +31,6 @@
 	<br/>
 	<button id="start">Start</button> &nbsp;&nbsp;&nbsp;&nbsp; <button id="pause" style="display: none;">Pause</button>
 </div>
+	Brick Breaker game by: Om Desai (Academy of Information Technology, UCVTS), 2020
 </body>
 </html>
