--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -55,7 +55,8 @@
         <h4 id="Oscore"> 0 </h4>
       </div>
     </div>
-    
+   
+	Brick Breaker game by: Om Desai (Academy of Information Technology, UCVTS), 2020
 </body>
 
 </html>
