--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -32,6 +32,6 @@
 	<br/>
 	<button id="start">Start</button> &nbsp;&nbsp;&nbsp;&nbsp; <button id="pause" style="display: none;">Pause</button>
 </div>
-	Brick Breaker game by: Om Desai (Academy of Information Technology, UCVTS), 2020
+	Brick Breaker by: Om Desai (Academy of Information Technology, UCVTS), 2020
 </body>
 </html>
