--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="div1" align=center>
-	<p class="navigation"> <a href="../index.html">Home</a> | <a href="../TicTacToe/tttIndex.html">Brick Breaker</a> | <a href="../Checkers/chkIndex.html">Checkers</a> </p>   
+	<p class="navigation"> <a href="../index.html">Home</a> | <a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a> | <a href="../Checkers/chkIndex.html">Checkers</a> </p>   
 	<br/>
 	<canvas id="Headingcanvas" width="825px" height="30px">
 	</canvas>
