--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -56,7 +56,7 @@
       </div>
     </div>
    
-	Brick Breaker game by: Om Desai (Academy of Information Technology, UCVTS), 2020
+	Tic-Tac-Toe by: Om Desai (Academy of Information Technology, UCVTS), 2020
 </body>
 
 </html>
