--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 <div id="div1" align=center>
-	<p class="navigation"> <a href="../index.html">Home</a> | <a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a> | <a href="../Checkers/chkIndex.html">Checkers</a> </p>   
+		<ul>
+  			<li><a href="../index.html">Home</a></li>
+  			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
+  			<li><a class="active" href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
+  			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
+		</ul>
 	<br/>
 	<canvas id="Headingcanvas" width="825px" height="30px">
 	</canvas>
@@ -32,6 +37,6 @@
 	<br/>
 	<button id="start">Start</button> &nbsp;&nbsp;&nbsp;&nbsp; <button id="pause" style="display: none;">Pause</button>
 </div>
-	Brick Breaker by: Om Desai (Academy of Information Technology, UCVTS), 2020
+	Brick Breaker by: Om Desai
 </body>
 </html>
