--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <title>Om Desai's Games!</title>
   </head>
 	<body>
-		<p class="navigation"> <a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a> | <a href="BrickBreaker/bbIndex.html">Brick Breaker</a> | <a href="Checkers/chkIndex.html">Checkers</a> </p>   
+		<ul>
+  			<li><a class="active" href="index.html">Home</a></li>
+  			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
+  			<li><a href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
+  			<li><a href="Checkers/chkIndex.html">Checkers</a></li>
+		</ul>
+
   	</body>
 </html>
 
