--- a/Checkers/chkIndex.html
+++ b/Checkers/chkIndex.html
@@ -14,6 +14,11 @@
   </head>
   
 <body>
-  <p class="navigation"> <a href="../index.html">Home</a> | <a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a> | <a href="../BrickBreaker/bbIndex.html">Brick Breaker</a> </p>   
+		<ul>
+  			<li><a href="../index.html">Home</a></li>
+  			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
+  			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
+  			<li><a class="active" href="Checkers/chkIndex.html">Checkers</a></li>
+		</ul>
 </body?
 </html?
