--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -14,7 +14,12 @@
   </head>
   
 <body>
-  <p class="navigation"> <a href="../index.html">Home</a> | <a href="../BrickBreaker/bbIndex.html">Brick Breaker</a> | <a href="../Checkers/chkIndex.html">Checkers</a> </p>   
+		<ul>
+  			<li><a href="../index.html">Home</a></li>
+  			<li><a class="active" href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
+  			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
+  			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
+		</ul>
 
   <h1>Tic | Tac | Toe</h1>
 
@@ -56,7 +61,7 @@
       </div>
     </div>
    
-	Tic-Tac-Toe by: Om Desai (Academy of Information Technology, UCVTS), 2020
+	Tic-Tac-Toe by: Om Desai
 </body>
 
 </html>
