--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -10,7 +10,7 @@
 		<ul>
   			<li><a href="../index.html">Home</a></li>
   			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
-  			<li><a class="active" href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
+  			<li><a class="active" href="bbIndex.html">Brick Breaker</a></li>
   			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
 		</ul>
 	<br/>
