--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -16,7 +16,7 @@
 <body>
 		<ul>
   			<li><a href="../index.html">Home</a></li>
-  			<li><a class="active" href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
+  			<li><a class="active" href="tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
 		</ul>
