--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -19,6 +19,7 @@
   			<li><a class="active" href="tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
+  			<li><a href="../faq.html">??</a></li>
 		</ul>
 
   <h1>Tic | Tac | Toe</h1>
@@ -27,15 +28,15 @@
       <h2>Turn: X</h2>
 
       <div class="container wrap" id="board">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
+        <div class="square" class="disable-select" style="cursor: pointer;"></div>
       </div>
 
       <div id = "buttons">
