--- a/Checkers/chkIndex.html
+++ b/Checkers/chkIndex.html
@@ -10,12 +10,12 @@
   
 <body>
 <div id="div1" align=center>
-
 		<ul>
   			<li><a href="../index.html">Home</a></li>
   			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a class="active" href="chkIndex.html">Checkers</a></li>
+  			<li><a href="../faq.html">??</a></li>
 		</ul>
 
 <h1>Checkers</h1>
@@ -25,7 +25,7 @@
 
 	<div class="checkersB" class="disable-select" style="cursor: pointer;"> 
             <!-- 0th row --> 
-            <div id=00 class="yellow" class="disable-select" style="cursor: pointer;" data-row="1">&#9920;</div> 
+            <div id=00 class="yellow" class="disable-select" data-row="1">&#9920;</div> 
             <div id=01 class="red"></div> 
             <div id=02 class="yellow" class="disable-select" data-row="1">&#9920;</div> 
             <div id=03 class="red"></div> 
@@ -105,5 +105,6 @@
             <div id=77 class="yellow" class="disable-select" data-row="8">&#9922;</div> 
         </div>
 </div>
+	Checkers by: Om Desai
 </body>
 </html>
