--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -12,8 +12,8 @@
   			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a class="active" href="bbIndex.html">Brick Breaker</a></li>
   			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
+  			<li><a href="../faq.html">??</a></li>
 		</ul>
-	<br/>
 	<canvas id="Headingcanvas" width="825px" height="30px">
 	</canvas>
 	<canvas id="Topcanvas" width="825px" height="60px">
