--- a/faq.html
+++ b/faq.html
@@ -13,11 +13,11 @@
   </head>
 	<body>
 		<ul>
-  			<li><a class="active" href="index.html">Home</a></li>
+  			<li><a href="index.html">Home</a></li>
   			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a href="Checkers/chkIndex.html">Checkers</a></li>
-  			<li><a href="faq.html">??</a></li>
+  			<li><a class="active" href="faq.html">??</a></li>
 		</ul>
 
   	</body>
