--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -25,7 +25,7 @@
   <h1>Tic | Tac | Toe</h1>
 
     <div class="container column">
-      <h2>Turn: X</h2>
+      <h2>Message: X</h2>
 
       <div class="container wrap" id="board">
         <div class="square" class="disable-select" style="cursor: pointer;"></div>
