--- a/Checkers/chkIndex.html
+++ b/Checkers/chkIndex.html
@@ -112,7 +112,7 @@
 		</br>
 		<button id="btnWhoStarts">Player 1 Starts</button>
 		</br>
-		<button id="btnKingTravel">Normal King</button>
+		<button id="btnKingPower">Normal King</button>
       </div>
 
 </div>
