--- a/faq.html
+++ b/faq.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet" />
     <link href="indexStyles.css" rel="stylesheet" type="text/css" />
 
-    <title>Om Desai's Games!</title>
+    <title>Om Desai's Games Suite - faq</title>
   </head>
 	<body>
 		<ul>
   			<li><a href="index.html">Home</a></li>
-  			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a href="Checkers/chkIndex.html">Checkers</a></li>
+  			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a class="active" href="faq.html">??</a></li>
 		</ul>
 
