--- a/BrickBreaker/bbIndex.html
+++ b/BrickBreaker/bbIndex.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Brick Breaker</title>
+	<title>Om Desai's Games Suite - Brick Breaker</title>
 	<link rel="stylesheet" href="bbStyles.css">
 </head>
 <body>
 <div id="div1" align=center>
 		<ul>
   			<li><a href="../index.html">Home</a></li>
-  			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a class="active" href="bbIndex.html">Brick Breaker</a></li>
   			<li><a href="../Checkers/chkIndex.html">Checkers</a></li>
+  			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="../faq.html">??</a></li>
 		</ul>
 	<canvas id="Headingcanvas" width="825px" height="30px">
