--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
   			<li><a href="faq.html">??</a></li>
 		</ul>
 
+
+<div>
+
+<br/><br/><br/><br/><br/><br/><br/><br/>
+
+<div class="container">
+  <img src="chk.jpg" alt="Checkers">
+  <button class="btn">Button</button>
+</div>
+
+</div>
+
+<div class="footer">
+	<br/>
+	Games Suite by: Om Desai
+</div>
+
   	</body>
 </html>
 
