--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
 <br/><br/><br/><br/><br/><br/><br/><br/>
 
 <div class="container">
-  <img src="chk.jpg" alt="Checkers">
-  <button class="btn">Button</button>
+  <img src="bb.jpg" alt="Brick Breaker">
+  <button id="bb" class="btn" onclick="window.location.href='BrickBreaker/bbIndex.html'">Open</button>
 </div>
+<div class="container">
+  <img src="chk.jpg" alt="Checkers">
+  <button id="chk" class="btn" onclick="window.location.href='Checkers/chkIndex.html'">Open</button>
+</div>
+<div class="container">
+  <img src="ttt.jpg" alt="Tic-Tac-Toe">
+  <button id="ttt" class="btn" onclick="window.location.href='TicTacToe/tttIndex.html'">Open</button>
+</div>
+
 
 </div>
 
