--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Om Desai's Games Suite - home</title>
   </head>
-	<body>
+<body>
 		<ul>
   			<li><a class="active" href="index.html">Home</a></li>
   			<li><a href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
@@ -19,25 +19,32 @@
   			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="faq.html">??</a></li>
 		</ul>
-
-
 <div>
 
 <br/><br/><br/><br/><br/><br/><br/><br/>
 
-<div class="container">
-  <img src="bb.jpg" alt="Brick Breaker">
-  <button id="bb" class="btn" onclick="window.location.href='BrickBreaker/bbIndex.html'">Open</button>
-</div>
-<div class="container">
-  <img src="chk.jpg" alt="Checkers">
-  <button id="chk" class="btn" onclick="window.location.href='Checkers/chkIndex.html'">Open</button>
-</div>
-<div class="container">
-  <img src="ttt.jpg" alt="Tic-Tac-Toe">
-  <button id="ttt" class="btn" onclick="window.location.href='TicTacToe/tttIndex.html'">Open</button>
-</div>
-
+<table>
+<tr>
+<td>
+	<div class="container">
+	  	<img src="bb.jpg" alt="Brick Breaker">
+  		<button id="bb" class="btn" onclick="window.location.href='BrickBreaker/bbIndex.html'">Open</button>
+	</div>
+</td>
+<td>
+	<div class="container">
+	  	<img src="chk.jpg" alt="Checkers">
+  		<button id="chk" class="btn" onclick="window.location.href='Checkers/chkIndex.html'">Open</button>
+</td>
+<td>
+	</div>
+	<div class="container">
+	  	<img src="ttt.jpg" alt="Tic-Tac-Toe">
+  		<button id="ttt" class="btn" onclick="window.location.href='TicTacToe/tttIndex.html'">Open</button>
+	</div>
+</td>
+</tr>
+</table>
 
 </div>
 
@@ -46,6 +53,6 @@
 	Games Suite by: Om Desai
 </div>
 
-  	</body>
+</body>
 </html>
 
