--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet" />
+    <title>Om Desai's Games Suite - Checkers</title>
     <link href="indexStyles.css" rel="stylesheet" type="text/css" />
 
-    <title>Om Desai's Games Suite - home</title>
   </head>
 <body>
+<div id="div1" align=center>
+
 		<ul>
   			<li><a class="active" href="index.html">Home</a></li>
   			<li><a href="BrickBreaker/bbIndex.html">Brick Breaker</a></li>
@@ -19,7 +17,12 @@
   			<li><a href="TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
   			<li><a href="faq.html">??</a></li>
 		</ul>
-<div>
+
+<h1>Om Desai's Games Suite</h1>
+<h2>AP CSP</h2>
+
+
+<div class="div">
 
 <br/><br/><br/><br/><br/><br/><br/><br/>
 
@@ -45,6 +48,8 @@
 </td>
 </tr>
 </table>
+
+</div>
 
 </div>
 
