--- a/Checkers/chkIndex.html
+++ b/Checkers/chkIndex.html
@@ -15,7 +15,6 @@
   			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
   			<li><a class="active" href="chkIndex.html">Checkers</a></li>
   			<li><a href="../TicTacToe/tttIndex.html">Tic-Tac-Toe</a></li>
-  			<li><a href="../faq.html">??</a></li>
 		</ul>
 
 <h1>Checkers</h1>
@@ -107,8 +106,9 @@
 
       <div id = "buttons">
 		<button id="btnPlayAgain" class="button1">Play Again!</button>
+		<button id="btnAIMove" class="button3" style="display:none;">Click for AI move</button>
 		<br/>
-		<button id="btnHowManyPlayers" class="button1">Two Players</button>
+		<button id="btnAIPlay" class="button1">Two Players</button>
 		<button id="btnWhoStarts" class="button1">Player1 Starts</button>
 		<br/>
 		<button id="btnKingPower" class="button1">Normal King</button>
