--- a/Checkers/chkIndex.html
+++ b/Checkers/chkIndex.html
@@ -112,7 +112,7 @@
 		<button id="btnWhoStarts" class="button1">Player1 Starts</button>
 		<br/>
 		<button id="btnKingPower" class="button1">Normal King</button>
-		<button id="btnallowSkipMove" class="button1">Allow Skip</button>
+		<button id="btnallowSkipMove" class="button1">Allow No Skip</button>
       </div>
 
 </div>
