--- a/TicTacToe/tttIndex.html
+++ b/TicTacToe/tttIndex.html
@@ -14,6 +14,7 @@
   </head>
   
 <body>
+<div align="center">
 		<ul>
   			<li><a href="../index.html">Home</a></li>
   			<li><a href="../BrickBreaker/bbIndex.html">Brick Breaker</a></li>
@@ -46,7 +47,7 @@
       </div>
 
     </div>
-
+</div>
     <div class = "scores">
       <div class ="score">
         <h3> X score </h3>
