--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
 <body>
-<div id="div1" align=center>
+<div align=center>
 
 		<ul>
   			<li><a class="active" href="index.html">Home</a></li>
