--- a/test/test.html
+++ b/test/test.html
@@ -15,6 +15,7 @@
 
 <button onclick='permissionM();'>Motion</button>
 <button onclick='permissionO();'>Orientation</button>
+<button onclick='Test();'>Test</button>
 
 
 </body>
