--- a/test/test.html
+++ b/test/test.html
@@ -16,6 +16,12 @@
 <button onclick='permissionM();'>Motion</button>
 <button onclick='permissionO();'>Orientation</button>
 <button onclick='Test();'>Test</button>
+  
+  <br><br><br>
+  
+<b>e.alpha :</b> <span id='alpha'></span><br/>
+<b>e.beta :</b> <span id='beta'></span><br/>
+<b>e.gamma :</b> <span id='gamma'></span><br/>
 
 
 </body>
