--- a/test/test.html
+++ b/test/test.html
@@ -23,7 +23,13 @@
 <b>e.beta :</b> <span id='beta'></span><br/>
 <b>e.gamma :</b> <span id='gamma'></span><br/>
 
-
+<br><br><br>
+  
+<b>e.acceleration :</b> <span id='acceleration'></span><br/>
+<b>e.accelerationIncludingGravity :</b> <span id='accelerationIncludingGravity'></span><br/>
+<b>e.rotationRate :</b> <span id='rotationRate'></span><br/>
+<b>e.interval :</b> <span id='interval'></span><br/>
+  
 </body>
 
 </html>
