--- a/test/test.html
+++ b/test/test.html
@@ -19,16 +19,16 @@
   
   <br><br><br>
   
-<b>e.alpha :</b> <span id='alpha'></span><br/>
-<b>e.beta :</b> <span id='beta'></span><br/>
-<b>e.gamma :</b> <span id='gamma'></span><br/>
+<b>Orientation.alpha :</b> <span id='alpha'></span><br/>
+<b>Orientation.beta :</b> <span id='beta'></span><br/>
+<b>Orientation.gamma :</b> <span id='gamma'></span><br/>
 
 <br><br><br>
   
-<b>e.acceleration :</b> <span id='acceleration'></span><br/>
-<b>e.accelerationIncludingGravity :</b> <span id='accelerationIncludingGravity'></span><br/>
-<b>e.rotationRate :</b> <span id='rotationRate'></span><br/>
-<b>e.interval :</b> <span id='interval'></span><br/>
+<b>Motion.acceleration :</b> <span id='acceleration'></span><br/>
+<b>Motion.accelerationIncludingGravity :</b> <span id='accelerationIncludingGravity'></span><br/>
+<b>Motion.rotationRate :</b> <span id='rotationRate'></span><br/>
+<b>Motion.interval :</b> <span id='interval'></span><br/>
   
 </body>
 
