--- a/test/test.html
+++ b/test/test.html
@@ -13,9 +13,7 @@
   
 <body>
 
-<button onclick='permissionM();'>Motion</button>
-<button onclick='permissionO();'>Orientation</button>
-<button onclick='Test();'>Test</button>
+<button onclick='permission();'>Motion & Orientation Permission</button>
   
   <br><br><br>
   
