--- a/test/test.html
+++ b/test/test.html
@@ -20,13 +20,15 @@
 <b>Orientation.alpha :</b> <span id='alpha'></span><br/>
 <b>Orientation.beta :</b> <span id='beta'></span><br/>
 <b>Orientation.gamma :</b> <span id='gamma'></span><br/>
-
+<b>Orientation.LastUpdated :</b> <span id='dtO'></span><br/>
+  
 <br><br><br>
   
 <b>Motion.acceleration :</b> <span id='acceleration'></span><br/>
 <b>Motion.accelerationIncludingGravity :</b> <span id='accelerationIncludingGravity'></span><br/>
 <b>Motion.rotationRate :</b> <span id='rotationRate'></span><br/>
 <b>Motion.interval :</b> <span id='interval'></span><br/>
+<b>Motion.LastUpdated :</b> <span id='dtM'></span><br/>
   
 </body>
 
