--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -30,6 +30,8 @@
 	<br/>
 	<button id="start" class="button1">Start</button>
 	<button id="pause" style="display: none;" class="button1">Pause</button>
+	<canvas id="Orientcanvas" width="825px" height="420px">
+	</canvas>
 </div>
 
 <div class="footer">
