--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -37,8 +37,7 @@
 	<br/>
 	Brick Breaker by: Om Desai
 	<br/>
-	<canvas id="Orientcanvas" width="825px" height="20px">
-	</canvas>
+	<b>Orientation.beta :</b> <span id='Obeta'></span><br/>
 </div>
 
 </body>
