--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -37,7 +37,10 @@
 	<br/>
 	Brick Breaker by: Om Desai
 	<br/>
-	<b>Orientation.beta :</b> <span id='Obeta'></span><br/>
+</div>
+
+<div>
+	<b>Orientation.beta :</b> <span id='Obeta'></span>	
 </div>
 
 </body>
