--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-	<b>Orientation.beta:</b> <span id='Obeta'></span>	
+	<b>Orientation.gamma:</b> <span id='Ogamma'></span>	
 </div>
 
 </body>
