--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -7,6 +7,7 @@
 	<script src="brickbreaker_mobile.js"></script>
 </head>
 <body>
+<br/>	<br/>	<br/>	<br/>
 <div id="div1" align=center>
 	<canvas id="Headingcanvas" width="825px" height="50px">
 	</canvas>
@@ -24,18 +25,15 @@
 		<input type="radio" name="complexity" value="4" class="complexity"><label for="4">&nbsp;Medium</label></input> &nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="radio" name="complexity" value="5" class="complexity"><label for="5">&nbsp;Hard</label></input> &nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="radio" name="complexity" value="6" class="complexity"><label for="6">&nbsp;Pro</label></input> &nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="7" class="complexity"><label for="7">&nbsp;Crazy</label></input> &nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="8.5" class="complexity"><label for="8.5">&nbsp;Death</label></input>
 	<div>
 	<br/>
 	<button id="start" class="button1">Start</button>
 	<button id="pause" style="display: none;" class="button1">Pause</button>
-
 </div>
 
 <div class="footer">
 	<br/>
-	Brick Breaker by: Om Desai
+	Brick Breaker by: Om Desai @Team AIRO (www.airobotics.us)
 	<br/>
 </div>
 
