--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -33,7 +33,7 @@
 
 <div class="footer">
 	<br/>
-	Brick Breaker by: Om Desai @Team AIRO (www.airobotics.us)
+	Brick Breaker by: Om Desai @Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
 	<br/>
 </div>
 
