--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -9,13 +9,13 @@
 <body>
 <br/>	<br/>	<br/>	<br/>
 <div id="div1" align=center>
-	<canvas id="Headingcanvas" width="825px" height="50px">
+	<canvas id="Headingcanvas" width="845px" height="50px">
 	</canvas>
-	<canvas id="Topcanvas" width="825px" height="30px">
+	<canvas id="Topcanvas" width="845px" height="30px">
 	</canvas>
-	<canvas id="Topcanvas2" width="825px" height="20px">
+	<canvas id="Topcanvas2" width="845px" height="20px">
 	</canvas>
-	<canvas id="BBcanvas" width="825px" height="420px">
+	<canvas id="BBcanvas" width="845px" height="460px">
 	</canvas>
 	<span id='ct' style="background-color: #FFFF00"></span>
 	<br/>
@@ -33,7 +33,7 @@
 
 <div class="footer">
 	<br/>
-	Brick Breaker by: Om Desai @Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
+	By: Om Desai @Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
 	<br/>
 </div>
 
