--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -33,7 +33,9 @@
 
 <div class="footer">
 	<br/>
-	By: Om Desai @Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
+	By: Om Desai 
+	<br/>
+	@Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
 	<br/>
 </div>
 
