--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -20,11 +20,11 @@
 	<span id='ct' style="background-color: #FFFF00"></span>
 	<br/>
 	<div id="div2" align=center>
-		<input type="radio" name="complexity" value="2" class="complexity"><label for="2">&nbsp;Baby</label></input> &nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="3" class="complexity"><label for="3">&nbsp;Easy</label></input> &nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="4" class="complexity"><label for="4">&nbsp;Medium</label></input> &nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="5" class="complexity"><label for="5">&nbsp;Hard</label></input> &nbsp;&nbsp;&nbsp;
-		<input type="radio" name="complexity" value="6" class="complexity"><label for="6">&nbsp;Pro</label></input> &nbsp;&nbsp;&nbsp;
+		<input type="radio" name="complexity" value="2" class="complexity"><label for="2">Baby</label></input> &nbsp;&nbsp;&nbsp;
+		<input type="radio" name="complexity" value="3" class="complexity"><label for="3">Easy</label></input> &nbsp;&nbsp;&nbsp;
+		<input type="radio" name="complexity" value="4" class="complexity"><label for="4">Medium</label></input> &nbsp;&nbsp;&nbsp;
+		<input type="radio" name="complexity" value="5" class="complexity"><label for="5">Hard</label></input> &nbsp;&nbsp;&nbsp;
+		<input type="radio" name="complexity" value="6" class="complexity"><label for="6">Pro</label></input> &nbsp;&nbsp;&nbsp;
 	<div>
 	<br/>
 	<button id="start" class="button1">Start</button>
