--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -35,7 +35,11 @@
 	<br/>
 	By: Om Desai 
 	<br/>
-	@Team AIRO <a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
+	@Team AIRO
+	<br/>
+	<a target="_blank" href="http://www.airobotics.us">(www.airobotics.us)</a>
+	<br/>
+	<a target="_blank" href="https://www.facebook.com/AIROTeamUS">(www.facebook.com/AIROTeamUS)</a>
 	<br/>
 </div>
 
