--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -5,6 +5,7 @@
 	<title>Om Desai's Brick Breaker</title>
 	<link rel="stylesheet" href="bbStyles.css">
 	<script src="brickbreaker_mobile.js"></script>
+	<script src="brickbreaker_mobile_phone.js"></script>
 </head>
 <body>
 <br/>	<br/>	<br/>	<br/>
