--- a/bbtest/bb.html
+++ b/bbtest/bb.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="bbStyles.css">
 	<script src="brickbreaker_mobile.js"></script>
 	<script src="brickbreaker_mobile_phone.js"></script>
+	<script src="brickbreaker_mobile_collison.js"></script>
+	<script src="brickbreaker_mobile_functions.js"></script>
 </head>
 <body>
 <br/>	<br/>	<br/>	<br/>
